
@startuml
hide empty methods

class Mine {
        UuidType id
        StringType name
        Storage storage
        DateTimeType time
        UuidType[] dwarfs
        BooleanType active

        == // Type-Tags // ==
        **#mongodb**
        
        --- // Property-Tags // ---
        **#daoFilter**: name, time, dwarfs, active
        --
        **#daoSort**: name, time
}

note top: the place where you find\nall the gems

class Storage {
        IntegerType mithril
        IntegerType gold
        IntegerType silver
        IntegerType diamond
        IntegerType iron
        IntegerType cupper
        
        --- // Property-Tags // ---
        **#daoFilter**: mithril, gold, silver, diamond, 
iron, cupper
}

note top: A storage stores produced gems

enum MineSpotMaterial {
    MITHRIL
    GOLD
    SILVER
    DIAMOND
    IRON
    CUPPER
    ROCK
}


class MineSpot {
        MineSpotMaterial material
        IntegerType initialAmountOfMaterial
        IntegerType currentAmountOfMaterial
        NumberType miningDifficulty
        
        --- // Property-Tags // ---
        **#daoFilter**: material
}

note top: Brick, from which the mine\nis built

class MineSpotRow {
        UuidType mine_id<color:grey>"" // -> Mine.id""</color>
        IntegerType row_number
        IntegerType level
        MineSpot[] columns

        == // Type-Tags // ==
        **#mongodb**
        
        --- // Property-Tags // ---
        **#daoFilter**: mine_id, row_number, level
        --
        **#daoSort**: mine_id, row_number, level
}

note top: One row of mine spots

class Dwarf {
        UuidType id
        StringType name
        UuidType mine_id<color:grey>"" // -> Mine.id""</color>
        Storage pocket
        IntegerType strongness
        IntegerType currentStrongness
        IntegerType hunger
        NumberType healthiness
        NumberType motivation
        DwarfWay[] way

        == // Type-Tags // ==
        **#mongodb**
        
        --- // Property-Tags // ---
        **#daoFilter**: name, mine_id, currentStrongness, hunger, 
healthiness, motivation
        --
        **#daoSort**: name, currentStrongness, hunger, healthiness, 
motivation
}

note top: A guy that runs around\nin the mine an dig\nfor gems

class DwarfWay {
        IntegerType row_number
        IntegerType spot
        IntegerType level
        
}


class History {
        DateTimeType timestamp
        HistoryChangeEnum change
        Dwarf dwarf
        MineSpotRow mineSpotRow
        Mine mine
        
}


enum HistoryChangeEnum {
    INSERT
    EDIT
    DELETE
}



    


Mine  *--  Storage
            




    






    
    
MineSpot  *--  MineSpotMaterial
            




    

MineSpotRow .. Mine
            


MineSpotRow "0" *-- "n" MineSpot
            

    



Dwarf .. Mine
            
Dwarf  *--  Storage
            






Dwarf "0" *-- "n" DwarfWay
            

    



    

History  *--  HistoryChangeEnum
            

History  *--  Dwarf
            

History  *--  MineSpotRow
            

History  *--  Mine
            

    

footer \ngenerated with yacg (https://github.com/OkieOth/yacg),\n(template: plantUml.mako v1.1.0)\npowered by plantuml (https://plantuml.com/)
@enduml